# third_party_libusb

./: BUILD.gn  OAT.xml  README.OpenSource  add_config_h.patch  bundle.json  fix-descriptor-parser-memory-safety.patch  hide-log-dev-id.patch  install.sh  libusbx.spec
darwin/: config.h
libusb/os/: darwin_usb.c  windows_common.c  windows_common.h  windows_usbdk.c  windows_winusb.c
linux/: config.h
windows/: config.h
